Create animation, add all png images, add appears function

--- a/Calendar/Calendar/months/March.xaml
+++ b/Calendar/Calendar/months/March.xaml
@@ -3,15 +3,38 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Calendar.March"
              BackgroundColor="#f3a8bc"
-             Title="March">
+             Title="March"
+             xmlns:controls="clr-namespace:XamForms.Controls;assembly=XamForms.Controls.Calendar">
 
     <StackLayout x:Name="stack">
 
-        <Image Source="spring.png" Aspect="AspectFill" Scale="1.5"/>
-        <Image.GestureRecognizers>
-            <TapGestureRecognizer
-            Tapped="TapGestureRecognizer_Tapped"/>
-        </Image.GestureRecognizers>
+        <StackLayout VerticalOptions="Start" HorizontalOptions="Center">
+
+            <Frame VerticalOptions="Start" BackgroundColor="Wheat" Margin="50">
+                <Image Source="spring.png" Aspect="AspectFill" Scale="1" x:Name="mainImg"/>
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                </Image.GestureRecognizers>
+            </Frame>
+
+            <controls:Calendar
+                x:Name="cld"
+                Padding="10,10,10,10"
+                Scale="1"
+                HorizontalOptions="Center"
+                VerticalOptions="StartAndExpand"
+                Margin="2"
+                SelectedBorderWidth="4"
+                DisabledBorderColor="Black"
+                ShowNumberOfWeek="false"
+                StartDay="Monday"
+                WeekdaysShow="False"
+                StartDate="03.01.2020"
+                TitleLabelTextColor="Purple"
+                TitleLeftArrowIsVisible="False"
+                TitleRightArrowIsVisible="False"/>
+
+        </StackLayout>
 
     </StackLayout>
 
