--- a/Calendar/Calendar/months/July.xaml
+++ b/Calendar/Calendar/months/July.xaml
@@ -4,5 +4,37 @@
              x:Class="Calendar.July"
              BackgroundColor="#15b2d3"
              Title="July">
+    <StackLayout x:Name="stack"
+                 xmlns:controls="clr-namespace:XamForms.Controls;assembly=XamForms.Controls.Calendar">
+
+        <StackLayout VerticalOptions="Start" HorizontalOptions="Center">
+
+            <Frame VerticalOptions="Start" BackgroundColor="Wheat" Margin="50">
+                <Image Source="summer2.png" Aspect="AspectFill" Scale="1" x:Name="mainImg"/>
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                </Image.GestureRecognizers>
+            </Frame>
+
+            <controls:Calendar
+                                x:Name="cld"
+                Padding="10,10,10,10"
+                Scale="1"
+                HorizontalOptions="Center"
+                VerticalOptions="StartAndExpand"
+                Margin="2"
+                SelectedBorderWidth="4"
+                DisabledBorderColor="Black"
+                ShowNumberOfWeek="false"
+                StartDay="Monday"
+                WeekdaysShow="False"
+                StartDate="07.01.2020"
+                TitleLabelTextColor="Purple"
+                TitleLeftArrowIsVisible="False"
+                TitleRightArrowIsVisible="False"/>
+
+        </StackLayout>
+
+    </StackLayout>
 
 </ContentPage>
