--- a/Calendar/Calendar/months/May.xaml
+++ b/Calendar/Calendar/months/May.xaml
@@ -3,6 +3,39 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Calendar.May"
              BackgroundColor="#fff1a6"
-             Title="May">
+             Title="May"
+             xmlns:controls="clr-namespace:XamForms.Controls;assembly=XamForms.Controls.Calendar">
+
+    <StackLayout x:Name="stack">
+
+        <StackLayout VerticalOptions="Start" HorizontalOptions="Center">
+
+            <Frame VerticalOptions="Start" BackgroundColor="Wheat" Margin="50">
+                <Image Source="spring2.png" Aspect="AspectFill" Scale="1" x:Name="mainImg"/>
+                <Image.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                </Image.GestureRecognizers>
+            </Frame>
+
+            <controls:Calendar
+                                x:Name="cld"
+                Padding="10,10,10,10"
+                Scale="1"
+                HorizontalOptions="Center"
+                VerticalOptions="StartAndExpand"
+                Margin="2"
+                SelectedBorderWidth="4"
+                DisabledBorderColor="Black"
+                ShowNumberOfWeek="false"
+                StartDay="Monday"
+                WeekdaysShow="False"
+                StartDate="05.01.2020"
+                TitleLabelTextColor="Purple"
+                TitleLeftArrowIsVisible="False"
+                TitleRightArrowIsVisible="False"/>
+
+        </StackLayout>
+
+    </StackLayout>
 
 </ContentPage>
